# danshen_animation

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  index.html
.hermes/plans/: 2026-05-05_100000-rust-cross-platform-desktop.md
backend/: .env.example  AGENTS.md  pyproject.toml
backend/src/: AGENTS.md  auth.py  config.py  database.py  main.py  worker.py
backend/src/models/: AGENTS.md  __init__.py  user.py
backend/src/pipeline/: AGENTS.md  __init__.py  adapter.py  character.py  composer.py  content_fetcher.py  dialogue_analyzer.py  extractor.py  news_analyzer.py  prompt_builder.py  storyboard.py  video_gen.py  voice.py
backend/src/routes/: AGENTS.md  __init__.py  admin.py  animate.py  auth.py  history.py  prompts.py  tasks.py
backend/src/utils/: AGENTS.md  __init__.py
backend/tests/: AGENTS.md  __init__.py  conftest.py  test_adapter_v2.py  test_admin.py  test_auth.py  test_config.py  test_dialogue_analyzer.py  test_news_analyzer.py  test_prompt_builder.py  test_prompts.py  test_storyboard.py
docs/: AGENTS.md  architecture.md  design.md  plan.md
ios/DanshenAnimation/: ContentView.swift  DanshenAnimationApp.swift
shared/: types.ts
sketches/: AGENTS.md
sketches/001-linear-dark/: README.md  index.html
sketches/002-claude-warm/: README.md  index.html
src/: AGENTS.md  app.rs  main.rs
src/api/: AGENTS.md  client.rs
src/components/: AGENTS.md  character_grid.rs  config_modal.rs  constants.rs  decorative_blobs.rs  footer.rs  header.rs  logo.rs  mod.rs  news_mode_hint.rs  progress_bar.rs  result_card.rs  scene_selector.rs  source_input.rs  style_selector.rs  submit_button.rs  types.rs  user.rs
src/config/: AGENTS.md  local_config.rs
src/hooks/: AGENTS.md  mod.rs  use_animation.rs
src/styles/: AGENTS.md  mod.rs  tailwind.css  (+1 more)
web/: next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
(+22 files in other folders)
